allure report with screenshots added